ruby-marshal-derive/tests/basic-fail/01-parse-enum.stderr
error: only structs are supported
 --> tests/basic-fail/01-parse-enum.rs:2:1
  |
2 | / pub enum MyObject {
3 | |     A {
4 | |         field1: i32,
5 | |     },
... |
8 | |     },
9 | | }
  | |_^
